--- a/src/components/Calendar/Calendar.module.css
+++ b/src/components/Calendar/Calendar.module.css
@@ -5,7 +5,7 @@
 .CalendarLabelBlock {
     width: 100%;
     height: 100px;
-    background: #F14929; 
+    background: #500805; 
     display: flex;
     justify-content: space-between;
     align-items: center;
