--- a/src/pages/Info/Info.module.css
+++ b/src/pages/Info/Info.module.css
@@ -94,9 +94,12 @@
     gap: 40px;
 }
 
-.RightImages {
-    margin-top: 70px;
-}
+    .RightImages {
+        margin-top: 0;
+    }    
+    .LeftImages {
+        margin-top: 70px;
+    }
 
 .BtnsBlocks {
     display: block;
@@ -281,8 +284,11 @@
     }
     
     .RightImages {
-        margin-top: 70px;
+        margin-top: 0;
     }    
+    .LeftImages {
+        margin-top: 70px;
+    }
 
     .BtnsBlocks {
         display: block;
