--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@500;600&display=swap');
 @font-face {
   font-family: futur;
-  src: url(futur.ttf);
+  src: url(Hagrid-Text-Medium-trial.otf);
 }
 
 * {
