--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@500;600&display=swap');
 @font-face {
-  font-family: futur;
+  font-family: Hagrid;
   src: url(Hagrid-Text-Medium-trial.otf);
 }
 
