--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@500;600&display=swap');
 @font-face {
   font-family: Hagrid;
-  src: url(Hagrid-Text-Medium-trial.otf);
+  src: url(Cygre-Regular.ttf);
 }
 
 * {
