--- a/src/components/Calendar/Calendar.module.css
+++ b/src/components/Calendar/Calendar.module.css
@@ -105,7 +105,7 @@ a {
     .GridBoxBlock {
         margin-top: 10px;
         width: 100%;
-        min-height: 270px;
+        height: 310px;
         display: grid;
         gap: 20px;
         grid-template-columns: repeat(2,1fr);
