--- a/src/components/Calendar/Calendar.module.css
+++ b/src/components/Calendar/Calendar.module.css
@@ -112,7 +112,7 @@ a {
     } 
     .CardBlock {
         width: 170px;
-        min-height: 270px;
+        height: 270px;
         flex-shrink: 0;
         border-top: 2px solid #190000;
         padding: 10px;
